[gd_scene load_steps=18 format=3 uid="uid://c0g0678wep4qm"]

[ext_resource type="Script" path="res://Units/Scripts/unit.gd" id="1_s1mxf"]
[ext_resource type="Script" path="res://Units/Scripts/range.gd" id="2_p271u"]
[ext_resource type="Script" path="res://Units/Scripts/unit_health.gd" id="3_70lja"]
[ext_resource type="Script" path="res://Units/Scripts/ground_attack.gd" id="3_badqk"]
[ext_resource type="Script" path="res://Units/Scripts/scout_stats.gd" id="4_2egxi"]
[ext_resource type="Script" path="res://Units/Scripts/scout_abilities.gd" id="5_0utj6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ewodx"]
albedo_color = Color(0.493333, 0.24, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ystkj"]
material = SubResource("StandardMaterial3D_ewodx")

[sub_resource type="BoxShape3D" id="BoxShape3D_j8m6v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g8its"]
albedo_color = Color(0.86, 0.535637, 0.2322, 1)

[sub_resource type="PrismMesh" id="PrismMesh_loa3a"]
material = SubResource("StandardMaterial3D_g8its")
size = Vector3(0.2, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ngq10"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sqb5u"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0wf4t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vanqi"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tisgm"]
bg_color = Color(1, 0, 0, 1)
border_color = Color(0.0810101, 0.139033, 0.194037, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_t48fj"]
viewport_path = NodePath("unit_sb/health_n3D/SubViewport")

[node name="scout_n3D" type="Node3D"]

[node name="unit_sb" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_s1mxf")

[node name="unit_shape_m" type="MeshInstance3D" parent="unit_sb"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = SubResource("BoxMesh_ystkj")

[node name="useless_cb" type="CollisionShape3D" parent="unit_sb"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_j8m6v")
disabled = true

[node name="direct_indicator_m" type="MeshInstance3D" parent="unit_sb"]
transform = Transform3D(-0.00215161, 0.400374, -3.8444e-10, 0.00892082, 7.65061e-06, -1.66335, -1.00218, -0.000859507, -0.0148061, 0.5187, 0, -2.26731e-08)
mesh = SubResource("PrismMesh_loa3a")

[node name="ability_collision_a3D" type="Area3D" parent="unit_sb"]

[node name="ability_collision_cb" type="CollisionShape3D" parent="unit_sb/ability_collision_a3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_ngq10")
disabled = true

[node name="enemy_collision_a3D" type="Area3D" parent="unit_sb" groups=["friendly_unit"]]
input_ray_pickable = false

[node name="enemy_collision_cb" type="CollisionShape3D" parent="unit_sb/enemy_collision_a3D"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
shape = SubResource("BoxShape3D_sqb5u")

[node name="range_n3D" type="Node3D" parent="unit_sb"]
script = ExtResource("2_p271u")

[node name="range_a3D" type="Area3D" parent="unit_sb/range_n3D"]
input_ray_pickable = false

[node name="range_collision_cb" type="CollisionShape3D" parent="unit_sb/range_n3D/range_a3D"]
shape = SubResource("BoxShape3D_0wf4t")
disabled = true

[node name="attack_n3D" type="Node3D" parent="unit_sb"]
script = ExtResource("3_badqk")

[node name="Timer" type="Timer" parent="unit_sb/attack_n3D"]
one_shot = true

[node name="health_n3D" type="Node3D" parent="unit_sb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000712633, 0.0060215, 1.23978e-05)
visible = false
script = ExtResource("3_70lja")

[node name="SubViewport" type="SubViewport" parent="unit_sb/health_n3D"]
disable_3d = true
transparent_bg = true

[node name="health_bar" type="ProgressBar" parent="unit_sb/health_n3D/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -13.5
offset_right = 108.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vanqi")
theme_override_styles/fill = SubResource("StyleBoxFlat_tisgm")
step = 1.0
value = 100.0
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="unit_sb/health_n3D"]
transform = Transform3D(-1.6995e-08, 0, -1, 0, 0.315, 0, 0.3888, 0, -4.37114e-08, 0, 0.36594, 0)
billboard = 1
texture = SubResource("ViewportTexture_t48fj")

[node name="heal_colour" type="Timer" parent="unit_sb/health_n3D"]
wait_time = 0.35
one_shot = true

[node name="abilities_n3D" type="Node3D" parent="unit_sb"]
script = ExtResource("5_0utj6")

[node name="stats_n3D" type="Node3D" parent="."]
script = ExtResource("4_2egxi")

[connection signal="body_entered" from="unit_sb/enemy_collision_a3D" to="unit_sb" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="unit_sb/enemy_collision_a3D" to="unit_sb" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="unit_sb/range_n3D/range_a3D" to="unit_sb/range_n3D" method="body_entered_attack_range"]
[connection signal="body_exited" from="unit_sb/range_n3D/range_a3D" to="unit_sb/range_n3D" method="_on_area_3d_body_exited"]
[connection signal="timeout" from="unit_sb/attack_n3D/Timer" to="unit_sb/attack_n3D" method="_on_timer_timeout"]
[connection signal="timeout" from="unit_sb/health_n3D/heal_colour" to="unit_sb/health_n3D" method="_on_heal_colour_timeout"]
